--- a/index.html
+++ b/index.html
@@ -6,21 +6,40 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Signature Systems Group</title>
+        <title>Eugene Empabido</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Cinzel:400,900,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/hover.css">
 		<link rel="stylesheet" href="css/style.css">
 		
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     </head>
 <body>
-	<header>
-		<a href="#" title="Eugene Emapbido" ><img src="/images/logo.png" /></a>
-	</header>
+	<div class="eePageWrap" >
+		<header>
+			<div class="eeContainer">
+				<a class="eeLogo" href="#" title="Eugene Emapbido" ><img src="images/logo.png" /></a>
+			</div>
+		</header>
+		<section class="eeDefaultWrap eeSocial" > 
+			<div class="eeContainer">
+				<ul>
+					<li><a href="https://www.facebook.com/gue.edac" target="_blank" class="hvr-wobble-vertical" ><i class="fa fa-facebook-square"></i></a></li>
+					<li><a href="https://plus.google.com/u/0/+EugeneEmpabido" target="_blank" class="hvr-wobble-vertical" ><i class="fa fa-google-plus-square"></i></a></li>
+					<li><a href="https://github.com/eugenece" target="_blank" class="hvr-wobble-vertical" ><i class="fa fa-github-square"></i></a></li>
+				</ul>
+			</div>
+		</section>
+		<footer>
+			<div class="eeContainer">
+				<p>&copy; Copyright 2016. Eugene Empabido</p>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
