--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="eePageWrap" >
 		<header>
 			<div class="eeContainer">
-				<a class="eeLogo" href="#" title="Eugene Emapbido" ><img src="images/logo.png" /></a>
+				<a class="eeLogo" href="http://eugenece.github.io" title="Eugene Emapbido" ><img src="images/logo.png" /></a>
 			</div>
 		</header>
 		<section class="eeDefaultWrap eeSocial" > 
