--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Cinzel:400,900,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/hover.css">
 		<link rel="stylesheet" href="css/animations.css">
@@ -35,7 +36,9 @@
 		</section>
 		<header>
 			<div class="eeContainer animatedParent">
-				<a class="eeLogo animated growIn slower" href="http://eugenece.github.io" title="Eugene Emapbido" ><img src="images/logo.png" /></a>
+				<a class="eeLogo animated growIn slower" href="http://eugenece.github.io" title="Eugene Emapbido" >
+					<img src="images/logo.png" />					
+				</a>
 			</div>
 		</header>
 		<section class="eeDefaultWrap eeSocial" > 
