--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
 <body>
 	<div class="eePageWrap" >
-		<section class="animatedParent">
+		<section class="animatedParent animateOnce">
 			<span class="eeCode html animated bounceInLeft delay-1000">HTML</span>
 			<span class="eeCode css animated bounceInRight delay-1000">CSS</span>
 			<span class="eeCode jquery animated bounceInLeft delay-1000">jQuery</span>
@@ -35,14 +35,14 @@
 			<span class="eeCode java animated bounceInRight delay-1000">Java</span>
 		</section>
 		<header>
-			<div class="eeContainer animatedParent">
+			<div class="eeContainer animatedParent animateOnce">
 				<a class="eeLogo animated growIn slower" href="http://eugenece.github.io" title="Eugene Emapbido" >
 					<img src="images/logo.png" />					
 				</a>
 			</div>
 		</header>
 		<section class="eeDefaultWrap eeSocial" > 
-			<div class="eeContainer animatedParent">
+			<div class="eeContainer animatedParent animateOnce">
 				<ul>
 					<li><a href="https://www.facebook.com/gue.edac" target="_blank" class="hvr-wobble-vertical animated fadeIn slower" ><i class="fa fa-facebook-square"></i></a></li>
 					<li><a href="https://plus.google.com/u/0/+EugeneEmpabido" target="_blank" class="hvr-wobble-vertical animated fadeIn slower" ><i class="fa fa-google-plus-square"></i></a></li>
