--- a/index.html
+++ b/index.html
@@ -24,16 +24,6 @@
     </head>
 <body>
 	<div class="eePageWrap" >
-		<section class="animatedParent animateOnce">
-			<span class="eeCode html animated bounceInLeft delay-1000">HTML</span>
-			<span class="eeCode css animated bounceInRight delay-1000">CSS</span>
-			<span class="eeCode jquery animated bounceInLeft delay-1000">jQuery</span>
-			<span class="eeCode javascript animated bounceInRight delay-1000">Javascript</span>
-			<span class="eeCode php animated bounceInLeft delay-1000">Php</span>
-			<span class="eeCode mysql animated bounceInRight delay-1000">Mysql</span>
-			<span class="eeCode sass animated bounceInLeft delay-1000">SASS</span>
-			<span class="eeCode java animated bounceInRight delay-1000">Java</span>
-		</section>
 		<header>
 			<div class="eeContainer animatedParent animateOnce">
 				<a class="eeLogo animated growIn slower" href="http://eugenece.github.io" title="Eugene Emapbido" >
@@ -44,11 +34,21 @@
 		<section class="eeDefaultWrap eeSocial" > 
 			<div class="eeContainer animatedParent animateOnce">
 				<ul>
-					<li><a href="https://www.facebook.com/gue.edac" target="_blank" class="hvr-wobble-vertical animated fadeIn slower" ><i class="fa fa-facebook-square"></i></a></li>
-					<li><a href="https://plus.google.com/u/0/+EugeneEmpabido" target="_blank" class="hvr-wobble-vertical animated fadeIn slower" ><i class="fa fa-google-plus-square"></i></a></li>
-					<li><a href="https://github.com/eugenece" target="_blank" class="hvr-wobble-vertical animated fadeIn slower" ><i class="fa fa-github-square"></i></a></li>
+					<li><a href="https://www.facebook.com/gue.edac" target="_blank" class="animated fadeIn slower" ><i class="fa fa-facebook-square"></i></a></li>
+					<li><a href="https://plus.google.com/u/0/+EugeneEmpabido" target="_blank" class="animated fadeIn slower" ><i class="fa fa-google-plus-square"></i></a></li>
+					<li><a href="https://github.com/eugenece" target="_blank" class="animated fadeIn slower" ><i class="fa fa-github-square"></i></a></li>
 				</ul>
 			</div>
+		</section>
+		<section class="eeCodes animatedParent animateOnce">
+			<span class="eeCode html animated bounceInLeft delay-1000">HTML</span>
+			<span class="eeCode css animated bounceInRight delay-1000">CSS</span>
+			<span class="eeCode jquery animated bounceInLeft delay-1000">jQuery</span>
+			<span class="eeCode javascript animated bounceInRight delay-1000">Javascript</span>
+			<span class="eeCode php animated bounceInLeft delay-1000">PHP</span>
+			<span class="eeCode mysql animated bounceInRight delay-1000">MySQL</span>
+			<span class="eeCode sass animated bounceInLeft delay-1000">SASS</span>
+			<span class="eeCode java animated bounceInRight delay-1000">Java</span>
 		</section>
 		<footer>
 			<div class="eeContainer">
